--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 a {
     font-weight: 500;
     color: #646cff;
-    text-decoration: inherit;
+    text-decoration: underline;
 }
 a:hover {
     color: #535bf2;
@@ -55,7 +55,6 @@ button:focus-visible {
 }
 
 #app {
-    max-width: 1280px;
     margin: 0 auto;
     text-align: center;
 }
